sharing and real time sync implemented