@@ -10,6 +10,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer; // Use AbstractHttpConfigurer for csrf
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -24,7 +25,7 @@ import java.net.URLEncoder; // Import URLEncoder
 import java.nio.charset.StandardCharsets; // Correct package for StandardCharsets
 import jakarta.servlet.http.HttpServletResponse; // Import HttpServletResponse
 
-import java.util.Arrays;
+import java.util.List; // Import List
 
 @Configuration
 @EnableWebSecurity
@@ -58,30 +59,41 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http,
                                                    SecurityContextRepository securityContextRepository,
-                                                   FirebaseTokenFilter firebaseTokenFilter) throws Exception { // Inject the filter bean
+                                                   FirebaseTokenFilter firebaseTokenFilter) throws Exception {
         http
-            .csrf(csrf -> csrf.disable())
+            // Disable CSRF - common for APIs, ensure state-changing operations are protected otherwise (e.g., idempotent PUT/DELETE)
+            .csrf(AbstractHttpConfigurer::disable)
+            // Configure CORS
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            // Change session policy to allow session creation
+            // Session management: Use sessions IF REQUIRED (needed for SecurityContextRepository)
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
-            // Explicitly set the SecurityContextRepository
+            // Set the SecurityContextRepository to manage context between requests (using HttpSession)
             .securityContext(context -> context.securityContextRepository(securityContextRepository))
+            // Authorization rules
             .authorizeHttpRequests(authz -> authz
-                .requestMatchers("/", "/error", "/favicon.ico", "/*.png", "/*.gif", "/*.svg", "/*.jpg", "/*.html", "/*.css", "/*.js").permitAll()
-                .requestMatchers("/login").permitAll()
+                // Publicly accessible static resources and basic pages
+                .requestMatchers("/", "/error", "/login", "/favicon.ico", "/*.png", "/*.gif", "/*.svg", "/*.jpg", "/*.html", "/*.css", "/*.js").permitAll()
+                // Authentication endpoint
                 .requestMatchers("/api/auth/verify-token").permitAll()
+                // WebSocket endpoint - Handled by Spring Security WebSocket integration, typically requires authentication established before connection
+                // Permit all here allows the connection attempt, auth is often checked at STOMP level or in @MessageMapping
                 .requestMatchers("/ws/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/view/pages/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/pages/**").permitAll()
+                // Public viewing/API access (GET requests) - Access control done in Service layer
+                .requestMatchers(HttpMethod.GET, "/view/pages/**").permitAll() // View access controlled by PageService
+                .requestMatchers(HttpMethod.GET, "/api/pages/**").permitAll()   // API read access controlled by PageService
+                // Authenticated access required for dashboard and specific view actions
                 .requestMatchers("/dashboard").authenticated()
+                .requestMatchers("/view/pages/create/**", "/view/pages/edit/**").authenticated() // Creating/Editing requires login
+                // Authenticated access for all other API endpoints (POST, PUT, DELETE on /api/pages/*)
                 .requestMatchers("/api/**").authenticated()
-                .requestMatchers("/view/pages/create/**", "/view/pages/edit/**").authenticated()
+                // Any other request not matched above requires authentication
                 .anyRequest().authenticated()
             )
-            // Configure UserDetailsService
+            // Configure UserDetailsService for loading user details during session authentication
             .userDetailsService(firebaseUserDetailsService)
-            // Add the filter bean before UsernamePasswordAuthenticationFilter
+            // Add the Firebase token filter *before* the standard username/password filter
             .addFilterBefore(firebaseTokenFilter, UsernamePasswordAuthenticationFilter.class)
+            // Exception handling for authentication entry point and access denied
             .exceptionHandling(exceptions -> exceptions
                 .authenticationEntryPoint((request, response, authException) -> {
                     String continueUrl = request.getRequestURI();
@@ -104,17 +116,18 @@ public class SecurityConfig {
         return http.build();
     }
 
-    private static final Logger logger = LoggerFactory.getLogger(SecurityConfig.class); // Add logger
+    private static final Logger logger = LoggerFactory.getLogger(SecurityConfig.class);
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:8080", "http://127.0.0.1:8080"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        configuration.setAllowCredentials(true);
+        // Allow specific origins (more secure than "*")
+        configuration.setAllowedOrigins(List.of("http://localhost:8080", "http://127.0.0.1:8080")); // Use List.of
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Use List.of
+        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type")); // Use List.of
+        configuration.setAllowCredentials(true); // Allow cookies/credentials
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // Apply CORS to all paths
         return source;
     }
 }
